--- a/prepa/src/components/footer/footer.css
+++ b/prepa/src/components/footer/footer.css
@@ -1,28 +1,11 @@
 .footer {
-    background-color: var(--container-color);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
-    z-index: var(--z-index);
+    background-color: white
 }
 
 .footer__container {
+    width: 100%;
     padding: 2rem 0 2rem;
-}
-
-.footer__title,
-.footer__link {
-    color: var(--title-color);
-}
-
-
-.footer__link:hover {
-    color: var(--title-color);
-}
-
-.footer__list {
-    display: flex;
-    justify-content: center;
-    column-gap: 1.5rem;
-    margin-bottom: 0.4rem;
 }
 
 .footer__social {
@@ -31,21 +14,8 @@
     column-gap: 1.25rem;
 }
 
-.footer__social-link {
-    border: 1px solid black;
-    font-size: 1.125rem;
-    padding: 0.4rem;
-    border-radius: 0.5rem;
-    display:inline-flex;
-}
-
-.footer__social-link:hover {
-    background-color: var(--title-color-dark);
-}
-
 .footer__copy {
     display: block;
-    color: var(--title-color);
     text-align: center;
     font-size: var(--smaller-font-size);
 }
