--- a/prepa/src/components/Products/productsData.css
+++ b/prepa/src/components/Products/productsData.css
@@ -44,10 +44,14 @@
 
 .product__button {
     padding: 10px 20px;
-    background-color: ;
-    color: #fff;
-    border: none;
+    border: 2px solid darkgreen;
+    color: #000;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
-  }
+}
+
+.product__button:hover {
+    background-color: darkgreen;
+    color: white;
+}
