--- a/prepa/src/components/Products/productsData.css
+++ b/prepa/src/components/Products/productsData.css
@@ -26,10 +26,14 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.image__container {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
 
 .product__image {
-    justify-content: center;
-    align-items: center;
     width: 200px;
     height: 200px;
     object-fit: cover;
