--- a/prepa/src/components/Products/productsData.css
+++ b/prepa/src/components/Products/productsData.css
@@ -29,6 +29,7 @@
 .image__container {
     display: flex;
     width: 100%;
+    height: auto;
     align-items: center;
     justify-content: center;
 }
