--- a/prepa/src/components/Products/productsData.css
+++ b/prepa/src/components/Products/productsData.css
@@ -10,20 +10,26 @@
 
 
 .product__grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill minmax(250px 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
 }
 
 
 .product__card {
+    width: 475px;
+    height: auto;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 15px;
     text-align: center;
     background-color: #fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.product__card:hover {
+    transform: scale(1.01);
 }
 
 .image__container {
