--- a/prepa/src/components/Products/productsData.css
+++ b/prepa/src/components/Products/productsData.css
@@ -2,6 +2,8 @@
     padding: 20px;
     text-align: center;
     font-family: Arial sans-serif;
+    word-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 .catalogue__title {
@@ -47,8 +49,17 @@
     margin-bottom: 10px;
 }
 
+.product__name{
+    font-size: var(--h3-font-size);
+    font-weight: bold;
+}
+
+.product__description {
+    font-size: var(--h3-font-size);
+}
 
 .product__price {
+    font-size: var(--h3-font-size);
     font-weight: bold;
     color: #0f9618;
     margin-top: 10px;
@@ -62,9 +73,23 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
+    font-size: var(--h3-font-size);
 }
 
 .product__button:hover {
     background-color: darkgreen;
     color: white;
+}
+
+
+@media screen and (max-width: 1920px) {
+    .product__card{
+        width: 470px;
+    }
+}
+
+@media screen and (max-width: 1509px){
+    .product__card{
+        width: 430px;
+    }
 }
