--- a/prepa/src/components/footer/footer.css
+++ b/prepa/src/components/footer/footer.css
@@ -6,6 +6,8 @@
 .footer {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     background-color: white;
+    word-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 .footer__container {
@@ -23,7 +25,7 @@
     padding: 0 15px;
 }
 
-.col-1 h4 {
+.col-1 .title {
     font-size: var(--h3-font-size);
     color: black;
     text-transform: capitalize;
@@ -31,7 +33,7 @@
     position: relative;
 }
 
-.col-1 h4::before {
+.col-1 .title::before {
     content: "";
     position: absolute;
     width: 4rem;
@@ -72,5 +74,21 @@
     display: block;
     text-align: center;
     font-size: var(--smaller-font-size);
+}
+
+@media screen  and (max-width: 1920px){
+    .col-1 {
+        font-size: var(--normal-font-size);
+    }
+    .footer__copy {
+        font-size: var(--normal-font-size);
+    }
+}
+
+
+@media screen and (max-width: 412px) {
+    .col-1 .title {
+        font-size: var(--large-font-size);
+    }
 }
 
