--- a/prepa/src/components/footer/footer.css
+++ b/prepa/src/components/footer/footer.css
@@ -85,17 +85,31 @@
     }
 }
 
+@media screen and (max-width: 850px) {
+    .col-1{
+        width: 50%;
+        padding: 0;
+        margin-bottom: 2rem;
+        font-size: var(--normal-font-size);
+    }
+    .footer__copy{
+        font-size: var(--small-font-size);
+        margin-right: 2rem;
+    }
+    
+}
 
 @media screen and (max-width: 361px) {
     .footer__container{
         width: 100%;
+        height: auto;
         height: auto;
     }
     .col-1{
         width: 100%;
         padding: 0;
         margin-bottom: 2rem;
-        font-size: var(--smaller-font-size);
+        font-size: var(--small-font-size);
     }
     .footer__copy{
         font-size: var(--smaller-font-size);
